--- a/public/index.html
+++ b/public/index.html
@@ -25,8 +25,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <script src="https://apis.google.com/js/api.js"></script>
-    <title>React App</title>
+<!--    <script src="https://apis.google.com/js/api.js"></script>-->
+    <script src="https://apis.google.com/js/platform.js?onload=init" async defer></script>
+
+    <title>SafLabs</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
